add github workflow task for image, cleanup

--- a/.github/workflows/ai-runner-pipelines-docker.yaml
+++ b/.github/workflows/ai-runner-pipelines-docker.yaml
@@ -31,6 +31,7 @@ jobs:
       matrix:
         dockerfile: 
           - docker/Dockerfile.segment_anything_2
+          - docker/Dockerfile.text_to_speech
     steps:
       - name: Check out code
         uses: actions/checkout@v4.1.1
