--- a/runner/docker/Dockerfile.apps
+++ b/runner/docker/Dockerfile.apps
@@ -1,70 +1,74 @@
 ARG BASE_IMAGE=livepeer/ai-runner:stream-diffusion
 FROM ${BASE_IMAGE}
 
-# # Install latest stable Go version
-# RUN apt-get update && apt-get install -y wget && \
-#     wget https://go.dev/dl/go1.21.5.linux-amd64.tar.gz && \
-#     tar -C /usr/local -xzf go1.21.5.linux-amd64.tar.gz && \
-#     rm go1.21.5.linux-amd64.tar.gz
-# ENV PATH=$PATH:/usr/local/go/bin
+# Install latest stable Go version and system dependencies
+RUN apt-get update && apt-get install -y \
+    wget \
+    python3-dev \
+    python3-gi \
+    libcairo2-dev \
+    libgirepository1.0-dev \
+    pkg-config \
+    && \
+    wget https://go.dev/dl/go1.21.5.linux-amd64.tar.gz && \
+    tar -C /usr/local -xzf go1.21.5.linux-amd64.tar.gz && \
+    rm go1.21.5.linux-amd64.tar.gz
 
-# # Set a default value for APP_DIRS
-# ARG APP_DIRS="ingress"
-# # Set environment variable for the app directories
+ENV PATH=$PATH:/usr/local/go/bin
+
+# Set a default value for APP_DIRS
+ARG APP_DIRS="ingress"
+# Set environment variable for the app directories
 # ENV APP_DIRS=${APP_DIRS}
 
-# # Create the app directory
-# WORKDIR /app/go
+# Add a build argument for installing Go apps
+ARG INSTALL_GO_APPS=false
 
-# # Copy only the specified app directories
-# COPY app/go/. .
+# Create the app directory and build Go apps if INSTALL_GO_APPS is true
+RUN if [ "$INSTALL_GO_APPS" = "true" ]; then \
+    mkdir -p /app/go && \
+    cd /app/go && \
+    for app in ${APP_DIRS}; do \
+        if [ -d "$app" ]; then \
+            cd $app && \
+            if [ ! -f go.mod ]; then \
+                go mod init github.com/livepeer/ai-worker/runner/app/go/$app; \
+            fi && \
+            go mod tidy && \
+            if [ -f main.go ]; then \
+                CGO_ENABLED=1 go build -o main; \
+            elif [ -f Makefile ]; then \
+                make; \
+            else \
+                echo "No recognized build process for ${app}"; \
+                exit 1; \
+            fi && \
+            cd ..; \
+        else \
+            echo "Directory not found for ${app}"; \
+            exit 1; \
+        fi; \
+    done && \
+    for app in ${APP_DIRS}; do \
+        if [ -f ${app}/main ]; then \
+            mv ${app}/main /usr/local/bin/${app}; \
+        elif [ -f ${app}/${app} ]; then \
+            mv ${app}/${app} /usr/local/bin/${app}; \
+        else \
+            echo "No compiled binary found for ${app}"; \
+            exit 1; \
+        fi; \
+    done; \
+fi
 
-# # Print the contents of the current directory for debugging
-# RUN ls -R
-
-# # Check GStreamer version
-# RUN gst-launch-1.0 --version || echo "GStreamer not found"
-# RUN pkg-config --modversion gstreamer-1.0 || echo "GStreamer development files not found"
-
-# # Build all specified apps
-# RUN set -e; for app in ${APP_DIRS}; do \
-#         if [ -d "$app" ]; then \
-#             cd $app && \
-#             if [ ! -f go.mod ]; then \
-#                 go mod init github.com/livepeer/ai-worker/runner/app/go/$app; \
-#             fi && \
-#             go mod tidy && \
-#             if [ -f main.go ]; then \
-#                 CGO_ENABLED=1 go build -o main; \
-#             elif [ -f Makefile ]; then \
-#                 make; \
-#             else \
-#                 echo "No recognized build process for ${app}"; \
-#                 exit 1; \
-#             fi && \
-#             cd ..; \
-#         else \
-#             echo "Directory not found for ${app}"; \
-#             exit 1; \
-#         fi; \
-#     done
-
-# # Move the compiled binaries to /usr/local/bin/
-# RUN set -e; for app in ${APP_DIRS}; do \
-#         if [ -f ${app}/main ]; then \
-#             mv ${app}/main /usr/local/bin/${app}; \
-#         elif [ -f ${app}/${app} ]; then \
-#             mv ${app}/${app} /usr/local/bin/${app}; \
-#         else \
-#             echo "No compiled binary found for ${app}"; \
-#             exit 1; \
-#         fi; \
-#     done
+# Copy Go app source files if INSTALL_GO_APPS is true
+COPY --chown=root:root app/go/. /app/go/
 # Return to the app directory
 WORKDIR /app
 # Install any additional Python packages
 COPY requirements.txt /app/
-RUN pip install --no-cache-dir -r /app/requirements.txt
+RUN pip install --upgrade pip && \
+    pip install --no-cache-dir -r /app/requirements.txt
 
 # Move StreamDiffusion to /app/streamdiffusion instead of copying
 RUN mv /streamdiffusion /app/streamdiffusion
