--- a/runner/docker/Dockerfile.multimedia
+++ b/runner/docker/Dockerfile.multimedia
@@ -74,7 +74,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
 # Note: The exact package names might vary depending on your NVIDIA driver version
 RUN apt-get install -y --no-install-recommends \
     libnvidia-decode-535-server \
-    libnvidia-encode-535-server 
+    libnvidia-encode-535-server
 
 # Clean up APT cache to reduce image size
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
@@ -82,3 +82,7 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 # Set environment variables for GStreamer
 ENV GST_PLUGIN_PATH=/usr/lib/x86_64-linux-gnu/gstreamer-1.0
 ENV GST_PLUGIN_SCANNER=/usr/lib/x86_64-linux-gnu/gstreamer1.0/gstreamer-1.0/gst-plugin-scanner
+
+# Copy mediamtx and config
+COPY --from=bluenviron/mediamtx:1.9.2 /mediamtx /usr/local
+COPY mediamtx.yml .
