--- a/runner/docker/Dockerfile.stream-diffusion
+++ b/runner/docker/Dockerfile.stream-diffusion
@@ -20,7 +20,7 @@ RUN git clone https://github.com/cumulo-autumn/StreamDiffusion.git /streamdiffus
 WORKDIR /streamdiffusion
 
 # Install StreamDiffusion
-RUN pip install streamdiffusion[tensorrt]
+RUN python setup.py develop easy_install streamdiffusion[tensorrt]
 
 # Install TensorRT extension
 RUN python -m streamdiffusion.tools.install-tensorrt
