--- a/runner/requirements.txt
+++ b/runner/requirements.txt
@@ -9,8 +9,8 @@ uvicorn==0.30.0
 huggingface_hub==0.23.2
 xformers==0.0.23
 triton>=2.1.0
-peft
-deepcache
+peft==0.11.1
+deepcache==0.1.1
 safetensors==0.4.3
 scipy==1.13.0
 numpy==1.26.4
