--- a/runner/docker/Dockerfile.stream-diffusion
+++ b/runner/docker/Dockerfile.stream-diffusion
@@ -20,9 +20,10 @@ RUN git clone https://github.com/cumulo-autumn/StreamDiffusion.git /streamdiffus
 WORKDIR /streamdiffusion
 
 # Install StreamDiffusion
-RUN pip install streamdiffusion[tensorrt]
+RUN pip install git+https://github.com/cumulo-autumn/StreamDiffusion.git@main#egg=streamdiffusion[tensorrt]
 
 # Install TensorRT extension
+RUN python -c "import platform; print(platform.system())"
 RUN python -m streamdiffusion.tools.install-tensorrt
 
 # Set environment variables for NVIDIA drivers
