--- a/runner/docker/Dockerfile.apps
+++ b/runner/docker/Dockerfile.apps
@@ -83,7 +83,7 @@ COPY bench.py /app/bench.py
 # Set up runit service directories and copy run scripts
 COPY app/runit /etc/service
 # Create log directories for each service
-RUN mkdir -p /var/log/uvicorn /var/log/infer
+RUN mkdir -p /var/log/uvicorn /var/log/infer /var/log/ingress
 # Ensure all run scripts are executable
 RUN chmod +x /etc/service/*/run /etc/service/*/log/run
 
