add python publisher

--- a/runner/app/python/trickle/Makefile
+++ b/runner/app/python/trickle/Makefile
@@ -2,3 +2,9 @@
 # Run `make reader-python stream=streamname`
 reader-python:
 	python read2pipe.py --stream $(stream) | ffplay -fflags nobuffer -probesize 32 -flags low_delay -
+
+file-reader:
+	python read2pipe.py --stream $(stream)
+
+file-publisher:
+	python file_publisher.py --stream $(stream) --local $(local)
