--- a/runner/docker/Dockerfile.live-portrait
+++ b/runner/docker/Dockerfile.live-portrait
@@ -1,5 +1,5 @@
 FROM livepeer/ai-runner:base
 
-RUN pip install https://github.com/JJassonn69/liveportrait/releases/download/liveportrait/liveportrait-0.1.0-py3-none-any.whl
+RUN pip install --no-cache-dir https://github.com/JJassonn69/liveportrait/releases/download/liveportrait-livepeer/liveportrait-0.2.0-py3-none-any.whl
 
 CMD ["uvicorn", "app.main:app", "--log-config", "app/cfg/uvicorn_logging_config.json", "--host", "0.0.0.0", "--port", "8000"]
