add appPort to enable external testing of runner

--- a/runner/.devcontainer/devcontainer.json
+++ b/runner/.devcontainer/devcontainer.json
@@ -24,6 +24,7 @@
 		}
 	},
 
+	"appPort": ["8037:8000"],
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	"forwardPorts": [
 		8000
