--- a/runner/Dockerfile
+++ b/runner/Dockerfile
@@ -49,4 +49,5 @@ RUN mkdir -p /var/log/uvicorn /var/log/infer
 RUN chmod +x /etc/service/*/run /etc/service/*/log/run
 
 # Boot uvicorn for now - we'll make it daemonized later 
-CMD ["uvicorn", "app.main:app", "--log-config", "app/cfg/uvicorn_logging_config.json", "--host", "0.0.0.0", "--port", "8000"]
+WORKDIR /app
+#CMD ["uvicorn", "app.main:app", "--log-config", "app/cfg/uvicorn_logging_config.json", "--host", "0.0.0.0", "--port", "8000"]
