--- a/runner/docker/Dockerfile.stream-diffusion
+++ b/runner/docker/Dockerfile.stream-diffusion
@@ -14,6 +14,7 @@ RUN pip install --no-cache-dir \
     torchvision==0.16.0 \
     xformers \
     --index-url https://download.pytorch.org/whl/cu121
+RUN pip install huggingface-hub==0.23.2
 
 # Install StreamDiffusion
 RUN pip install git+https://github.com/cumulo-autumn/StreamDiffusion.git@main#egg=streamdiffusion[tensorrt]
