--- a/runner/docker/Dockerfile.apps
+++ b/runner/docker/Dockerfile.apps
@@ -19,7 +19,7 @@ ENV PATH=$PATH:/usr/local/go/bin
 # Return to the app directory
 WORKDIR /app
 # Install any additional Python packages
-COPY requirements.live-ai.txt /app/
+COPY requirements.live-ai.txt /app/requirements.txt
 RUN pip install --upgrade pip && \
     pip install --no-cache-dir -r /app/requirements.txt
 
