--- a/runner/.devcontainer/devcontainer.json
+++ b/runner/.devcontainer/devcontainer.json
@@ -5,7 +5,7 @@
 
 	// Image to use for the dev container. More info: https://containers.dev/guide/dockerfile.
 	"build": {
-		"dockerfile": "../Dockerfile"
+		"dockerfile": "../Dockerfile.segment_anything_2"
 	},
 	"runArgs": [
 		"--gpus=all"
@@ -24,6 +24,7 @@
 		}
 	},
 
+	"appPort": ["8037:8000"],
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	"forwardPorts": [
 		8000
