Fix logging in live subprocess.

--- a/runner/app/cfg/uvicorn_logging_config.json
+++ b/runner/app/cfg/uvicorn_logging_config.json
@@ -21,7 +21,7 @@
         "access": {
             "formatter": "access",
             "class": "logging.StreamHandler",
-            "stream": "ext://sys.stdout"
+            "stream": "ext://sys.stderr"
         }
     },
     "loggers": {
