--- a/runner/docker/Dockerfile.text_to_speech
+++ b/runner/docker/Dockerfile.text_to_speech
@@ -7,12 +7,15 @@ RUN apt-get update && \
     rm -rf /var/lib/apt/lists/*
 
 RUN pip install --no-cache-dir \
-    transformers==4.43.0 \
+    transformers==4.43.3 \
     peft \
     deepcache \
     soundfile \
     g2p-en \
     flash_attn \
-    git+https://github.com/huggingface/parler-tts.git
+    git+https://github.com/huggingface/parler-tts.git@5d0aca9753ab74ded179732f5bd797f7a8c6f8ee
+
+# Copy the app directory into the container
+COPY app /app
 
 CMD ["uvicorn", "app.main:app", "--log-config", "app/cfg/uvicorn_logging_config.json", "--host", "0.0.0.0", "--port", "8000"]
