--- a/runner/docker/Dockerfile.live-base
+++ b/runner/docker/Dockerfile.live-base
@@ -17,15 +17,52 @@ RUN curl https://pyenv.run | bash
 ENV PYENV_ROOT /root/.pyenv
 ENV PATH $PYENV_ROOT/shims:$PYENV_ROOT/bin:$PATH
 
-# Install your desired Python version
-ARG PYTHON_VERSION=3.10
-RUN pyenv install $PYTHON_VERSION && \
-    pyenv global $PYTHON_VERSION && \
-    pyenv rehash
+# We do not install any specific Python version here, since each pipeline might need a different version.
 
-# Upgrade pip and install your desired packages
-ARG PIP_VERSION=23.3.2
-RUN pip install --no-cache-dir --upgrade pip==${PIP_VERSION} setuptools==69.5.1 wheel==0.43.0
+# Install ffmpeg
 
-# Boot uvicorn for now - we'll make it daemonized later 
-WORKDIR /app
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    autoconf automake build-essential cmake git-core libtool pkg-config wget \
+    nasm yasm zlib1g-dev libpng-dev libx264-dev && \
+    rm -rf /var/lib/apt/lists/*
+
+# Set up environment variables
+ENV NV_CODEC_HEADERS=/usr/local/cuda/include/ffnvcodec/
+RUN git clone -b n12.2.72.0 --depth 1 https://git.videolan.org/git/ffmpeg/nv-codec-headers.git && \
+    cd nv-codec-headers && \
+    make && \
+    make install && \
+    cd .. && rm -rf nv-codec-headers
+
+# Clone the FFmpeg repository and checkout the latest release
+RUN git clone --branch n7.0.2 --depth 1 https://github.com/FFmpeg/FFmpeg.git ffmpeg
+
+# Build FFmpeg with static linking and the desired hardware-accelerated features
+RUN cd ffmpeg && \
+    ./configure --prefix=/compiled \
+                --pkg-config-flags="--static" \
+                --extra-cflags="-I/ffmpeg_build/include -I/usr/local/cuda/include" \
+                --extra-ldflags="-L/ffmpeg_build/lib -L/usr/local/cuda/lib64" \
+                --extra-libs="-lpthread -lm" \
+                --enable-nonfree \
+                --enable-cuda-nvcc \
+                --enable-cuda \
+                --enable-libnpp \
+                --enable-cuvid \
+                --enable-nvenc \
+                --enable-nvdec \
+                --enable-static \
+                --enable-gpl \
+                --enable-libx264 \
+                --disable-shared \
+                --disable-debug \
+                --disable-doc && \
+    make -j$(nproc) && \
+    make install && \
+    make distclean
+
+# Copy the compiled FFmpeg binaries to /usr/local
+RUN cp -R /compiled/* /usr/local/
+
+# Clean up APT cache to reduce image size
+RUN apt-get clean && rm -rf /var/lib/apt/lists/*
