--- a/runner/docker/Dockerfile.live-comfyui
+++ b/runner/docker/Dockerfile.live-comfyui
@@ -29,9 +29,15 @@ RUN cd /comfyui/custom_nodes && \
     cd ComfyUI-Depth-Anything-Tensorrt && \
     pip install -r requirements.txt
 
+# Upgrade TensorRT to 10.6.0
+RUN pip uninstall -y tensorrt && \ 
+    pip install tensorrt==10.6.0
+
+RUN apt update && apt install -y vim
+
 # Install Depth Anything Model
 
-# RUN git clone https://github.com/yuvraj108c/ComfyUI-Depth-Anything-Tensorrt.git && \
+# RUN git clone https://github.com/yuvraj108c/ComfyUI-Depth-Anything-x.git && \
 #     cd ComfyUI-Depth-Anything-Tensorrt && \
 #     pip install -r requirements.txt
 
